fixed html spacing

--- a/static/styles.css
+++ b/static/styles.css
@@ -7,9 +7,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.input-control {
-	max-width: 300px;
-}
 /* Style the content */
 .content {
     margin-left: 200px;
